fixed z-index

--- a/src/style.css
+++ b/src/style.css
@@ -125,7 +125,7 @@ button:active {
   border-radius: 5px;
   padding: 16px;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   left: 50%;
   bottom: 30px;
   font-size: 17px;
